[gd_scene load_steps=29 format=3 uid="uid://c7vd5liu3ybqa"]

[ext_resource type="Script" uid="uid://yuuuyc68pjm8" path="res://src/characters/NPC/NPC.gd" id="1_75364"]
[ext_resource type="AudioStream" uid="uid://pqgvomid7ixe" path="res://assets/audio/sfx/connect.wav" id="2_ck15w"]
[ext_resource type="AudioStream" uid="uid://d3vy727hyr25y" path="res://assets/audio/sfx/disconnect.wav" id="3_5ttc1"]
[ext_resource type="AudioStream" uid="uid://df3g3eyk3fao8" path="res://assets/audio/sfx/death.wav" id="4_0j6y6"]
[ext_resource type="AudioStream" uid="uid://vay4bk1del6n" path="res://assets/audio/sfx/hit2.wav" id="5_u8s1j"]
[ext_resource type="Shader" uid="uid://cqtpq68obqgkq" path="res://src/shaders/damage_flash.gdshader" id="6_6ecrv"]
[ext_resource type="Texture2D" uid="uid://holr4osbvb5h" path="res://assets/sprites/playerNPC.png" id="7_yn2cm"]
[ext_resource type="Script" uid="uid://b7x1p4s5lgiub" path="res://src/characters/camera.gd" id="8_55nt6"]
[ext_resource type="Texture2D" uid="uid://box8ojc4m3kk8" path="res://assets/sprites/hit.png" id="9_hbob2"]
[ext_resource type="Script" uid="uid://4tyc5urners" path="res://src/test/agent_movement.gd" id="10_wi2qf"]
[ext_resource type="Theme" uid="uid://kl4uy5tx6k4b" path="res://src/theme.tres" id="11_ck15w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bsgwr"]
shader = ExtResource("6_6ecrv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/factor = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kb1y3"]
atlas = ExtResource("7_yn2cm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppvc2"]
atlas = ExtResource("7_yn2cm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsgwr"]
atlas = ExtResource("7_yn2cm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqlo3"]
atlas = ExtResource("7_yn2cm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgt8a"]
atlas = ExtResource("7_yn2cm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ptetw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb1y3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppvc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsgwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqlo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgt8a")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_k70i8"]
offsets = PackedFloat32Array(0, 0.27)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kb1y3"]
gradient = SubResource("Gradient_k70i8")
height = 24
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_kb1y3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k70i8"]
radius = 19.0263

[sub_resource type="AtlasTexture" id="AtlasTexture_lle6m"]
atlas = ExtResource("9_hbob2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5efqo"]
atlas = ExtResource("9_hbob2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkyut"]
atlas = ExtResource("9_hbob2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5oe8"]
atlas = ExtResource("9_hbob2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpso3"]
atlas = ExtResource("9_hbob2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_537jr"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lle6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5efqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkyut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5oe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpso3")
}],
"loop": false,
"name": &"new_animation",
"speed": 13.19
}]

[node name="npc" type="CharacterBody2D" node_paths=PackedStringArray("navigation_agent", "sprite")]
collision_layer = 2
motion_mode = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_75364")
streams = Array[AudioStream]([ExtResource("2_ck15w"), ExtResource("3_5ttc1"), ExtResource("4_0j6y6"), ExtResource("5_u8s1j")])
navigation_agent = NodePath("NavigationAgent2D")
sprite = NodePath("AnimatedSprite2D")
SPEED = 150
hp = 3
max_hp = 3

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
debug_enabled = true
debug_path_custom_color = Color(1, 0, 1, 1)
debug_path_custom_point_size = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_bsgwr")
sprite_frames = SubResource("SpriteFrames_ptetw")
animation = &"walk"
frame_progress = 0.713078

[node name="shadow" type="Sprite2D" parent="AnimatedSprite2D"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(0, 16)
texture = SubResource("GradientTexture2D_kb1y3")

[node name="ProgressBar" type="ProgressBar" parent="AnimatedSprite2D"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -41.0
offset_right = 84.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(100, 0)
theme = ExtResource("11_ck15w")
max_value = 5.0
value = 5.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kb1y3")

[node name="collide with player" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collide with player"]
shape = SubResource("CircleShape2D_k70i8")

[node name="RandomTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="hit_delay" type="Timer" parent="."]
one_shot = true

[node name="enth_taker" type="Timer" parent="."]
wait_time = 2.3

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("8_55nt6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[node name="Node2D" type="Node2D" parent="."]

[node name="hit_anim" type="AnimatedSprite2D" parent="Node2D"]
visible = false
z_index = 128
position = Vector2(19, 0)
sprite_frames = SubResource("SpriteFrames_537jr")
animation = &"new_animation"
frame = 4
frame_progress = 1.0

[node name="Test" type="Node" parent="." node_paths=PackedStringArray("target_node")]
script = ExtResource("10_wi2qf")
testing = false
target_node = NodePath("..")
metadata/_custom_type_script = "uid://xhc664htnyvd"

[connection signal="body_entered" from="collide with player" to="." method="_on_collide_with_player_body_entered"]
[connection signal="body_exited" from="collide with player" to="." method="_on_collide_with_player_body_exited"]
[connection signal="timeout" from="RandomTimer" to="." method="_on_random_timer_timeout"]
[connection signal="timeout" from="hit_delay" to="." method="_on_hit_delay_timeout"]
[connection signal="timeout" from="enth_taker" to="." method="_on_enth_taker_timeout"]
